[project]
name = "SortedCounter"
authors = [
    {name = "JCGoran", email = "jcgoran@protonmail.com"},
]
description = "Sorted version of collections.Counter"
dynamic = ["version"]
requires-python = ">=3.8,<3.13"
optional-dependencies.dev = ["cmake-format", "clang-format"]

[build-system]
requires = [
    "scikit-build-core",
    "setuptools-scm>=8.0",
    "nanobind",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.packages = ["python/sortedcounter"]
logging.level = "DEBUG"

[tool.scikit-build.cmake]
verbose = true
version = ">=3.15.0"

[tool.setuptools_scm]

[tool.cibuildwheel]
skip = ["pp*", "*-win32", "*-manylinux_i686", "*-musllinux_i686", "*-musllinux_x86_64", "*-musllinux_aarch64"]
test-command = [
    "true",
]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }
